--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <div class="hero">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="hero-logo">
+            <img src="/img/logo-frame.svg" alt="Logo Imperial Real State">
+        </div>
+        <a href="#" class="hero-down">
+            <img src="/img/down.svg" alt="flecha abajo">
+        </a>
+    </div>
 </body>
 </html>
