--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Inicio</title>
 </head>
 <body>
+    <header>
+        <img src="img/logo.svg" alt="Logo Imperial Real State">
+        <nav>
+            <a href="#" class="activo">Inicio</a>
+            <a href="#">Venta</a>
+            <a href="#">Alquiler</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </header>
     <div class="hero">
         <div></div>
         <div></div>
