transicion scroll nav bar

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="/js/main.js"></script>
     <title>Inicio</title>
 </head>
 <body>
-    <header>
+    <header class="transparente">
         <img src="img/logo.svg" alt="Logo Imperial Real State">
         <nav>
             <a href="#" class="activo">Inicio</a>
@@ -27,6 +29,12 @@
         <a href="#" class="hero-down">
             <img src="/img/down.svg" alt="flecha abajo">
         </a>
+    </div>
+    <div class="primera" id="pr">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
     </div>
 </body>
 </html>
