nav bar añadida, nav bar del top se oculta a 620px y se mueve el icono a la derecha

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
             <img src="/img/down.svg" alt="flecha abajo">
         </a>
     </div>
+    <div id="burger">
+        <div class="barra sup"></div>
+        <div class="barra med"></div>
+        <div class="barra inf"></div>
+    </div>
+    <div class="menu">
+        <nav>
+            <a href="#">Inicio</a>
+            <hr>
+            <a href="#">Venta</a>
+            <hr>
+            <a href="#">Alquiler</a>
+            <hr>
+            <a href="#">Contacto</a>
+            <hr>
+        </nav>
+        <p class="copy">&copy; Copyright</p>
+    </div>
     <div class="primera" id="pr">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
