--- a/index.html
+++ b/index.html
@@ -48,11 +48,22 @@
         </nav>
         <p class="copy">&copy; Copyright</p>
     </div>
-    <div class="primera" id="pr">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illo veniam! Neque odio dicta distinctio excepturi adipisci vitae eos quibusdam, rem cum quasi sapiente optio quod! Ut cumque eos, accusamus rerum ratione quaerat beatae inventore itaque reprehenderit pariatur blanditiis excepturi.</p>
+    <div class="fila primera" id="pr">
+        <div class="col-66">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo totam ducimus tempora velit consectetur eos impedit! Eum atque at earum ullam illo molestias nihil rem.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A at vitae quam reprehenderit, exercitationem fugit?</p>
+        </div>
+        <div class="col-33">
+            <img src="/img/thumb4.jpg" alt="Imagen casa">
+        </div>
+    </div>
+    <div class="fila">
+        <div class="col-50">
+            <img src="/img/thumb5.jpg" alt="">
+        </div>
+        <div class="col-50">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa aliquid eos beatae magni nemo. Voluptates odio amet eum ratione, deleniti fugiat rem consequuntur provident, sint repudiandae et in fuga, eos quo iste ea exercitationem libero enim delectus. Necessitatibus voluptatum, a dignissimos quisquam, at dolorum porro voluptate minus ratione, ad facilis?
+        </div>
     </div>
 </body>
 </html>
