--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="hero-logo">
             <img src="/img/logo-frame.svg" alt="Logo Imperial Real State">
         </div>
-        <a href="#" class="hero-down">
+        <a href="#pr" class="hero-down">
             <img src="/img/down.svg" alt="flecha abajo">
         </a>
     </div>
@@ -48,7 +48,8 @@
         </nav>
         <p class="copy">&copy; Copyright</p>
     </div>
-    <div class="fila primera" id="pr">
+    <div class="fila primera">
+        <span id="pr">&nbsp;</span>
         <div class="col-66">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo totam ducimus tempora velit consectetur eos impedit! Eum atque at earum ullam illo molestias nihil rem.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A at vitae quam reprehenderit, exercitationem fugit?</p>
