--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa aliquid eos beatae magni nemo. Voluptates odio amet eum ratione, deleniti fugiat rem consequuntur provident, sint repudiandae et in fuga, eos quo iste ea exercitationem libero enim delectus. Necessitatibus voluptatum, a dignissimos quisquam, at dolorum porro voluptate minus ratione, ad facilis?
         </div>
     </div>
+    <div class="fila parallax">
+        <div class="col-100">
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+    </div>
 </body>
 </html>
