--- a/index.html
+++ b/index.html
@@ -71,5 +71,38 @@
             <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
     </div>
+    <div class="fila">
+       <div class="col-50 caja-nav flex-colum-center">
+           <img src="/img/comprar.svg" alt="">
+           <a href="#">Venta</a>
+       </div>
+       <div class="col-50 caja-nav flex-colum-center">
+           <img src="/img/alquilar.svg" alt="">
+           <a href="">Alquiler</a>
+       </div>
+    </div>
+
+    <div class="fila">
+        <div class="col-100 flex-column-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, expedita?</p>
+            <form class="contacto">
+                <div class="fila">
+                    <input class="usuario"type="text" placeholder="nombre y apellidos">
+                </div>
+                <div class="fila">
+                    <input class="email "type="emai" placeholder="correo electrónico">
+                </div>
+                <div class="fila flex-end">
+                    <button type="submit">Enviar</button>
+                </div>
+                <div class="fila flex-center">
+                    <input type="checkbox"  id="condiciones">
+                    <label for="condiciones">
+                        Acepto las condiciones legales.
+                    </label>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
