--- a/contacto.html
+++ b/contacto.html
@@ -7,29 +7,19 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="/js/main.js"></script>
-    <title>Inicio</title>
+    <title>Contacto</title>
 </head>
 <body>
-    <header class="transparente">
+    <header >
         <img src="img/logo.svg" alt="Logo Imperial Real State">
         <nav>
-            <a href="index.html" class="activo">Inicio</a>
-            <a href="ventas.html">Venta</a>
+            <a href="index.html" >Inicio</a>
+            <a href="ventas.html" >Ventas</a>
             <a href="#">Alquiler</a>
-            <a href="contacto.html">Contacto</a>
+            <a href="#" class="activo">Contacto</a>
         </nav>
     </header>
-    <div class="hero">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div class="hero-logo">
-            <img src="/img/logo-frame.svg" alt="Logo Imperial Real State">
-        </div>
-        <a href="#pr" class="hero-down">
-            <img src="/img/down.svg" alt="flecha abajo">
-        </a>
-    </div>
+   
     <div id="burger">
         <div class="barra sup"></div>
         <div class="barra med"></div>
@@ -39,7 +29,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <hr>
-            <a href="ventas.html">Venta</a>
+            <a href="ventas.html">Ventas</a>
             <hr>
             <a href="#">Alquiler</a>
             <hr>
@@ -48,41 +38,7 @@
         </nav>
         <p class="copy">&copy; Copyright</p>
     </div>
-    <div class="fila primera">
-        <span id="pr">&nbsp;</span>
-        <div class="col-66">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo totam ducimus tempora velit consectetur eos impedit! Eum atque at earum ullam illo molestias nihil rem.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A at vitae quam reprehenderit, exercitationem fugit?</p>
-        </div>
-        <div class="col-33">
-            <img src="/img/thumb4.jpg" alt="Imagen casa">
-        </div>
-    </div>
-    <div class="fila">
-        <div class="col-50">
-            <img src="/img/thumb5.jpg" alt="">
-        </div>
-        <div class="col-50">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa aliquid eos beatae magni nemo. Voluptates odio amet eum ratione, deleniti fugiat rem consequuntur provident, sint repudiandae et in fuga, eos quo iste ea exercitationem libero enim delectus. Necessitatibus voluptatum, a dignissimos quisquam, at dolorum porro voluptate minus ratione, ad facilis?
-        </div>
-    </div>
-    <div class="fila parallax">
-        <div class="col-100">
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-        </div>
-    </div>
-    <div class="fila">
-       <div class="col-50 caja-nav flex-colum-center">
-           <img src="/img/comprar.svg" alt="">
-           <a href="ventas.html">Venta</a>
-       </div>
-       <div class="col-50 caja-nav flex-colum-center">
-           <img src="/img/alquilar.svg" alt="">
-           <a href="">Alquiler</a>
-       </div>
-    </div>
-
-    <div class="fila">
+    <div class="fila contacto">
         <div class="col-100 flex-column-center">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, expedita?</p>
             <form class="contacto">
@@ -102,6 +58,30 @@
                     </label>
                 </div>
             </form>
+        </div>
+    </div>
+    <div class="fila">
+        <span id="aviso">&nbsp;</span>
+        <div class="col-100">
+            <h1>Aviso legal</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+        </div>
+    </div>
+    <div class="fila">
+        <span id="cookies">&nbsp;</span>
+        <div class="col-100">
+            <h1>Política de Cookies</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit veritatis molestias id temporibus nobis vitae assumenda earum nulla doloribus aliquam!</p>
         </div>
     </div>
     <footer class="fila">
@@ -132,8 +112,8 @@
                 <img class="rrss" src="/img/instagram.svg" alt="">
             </div>
             <div class="flex-around m-t">
-                <a href="contacto.html#aviso">Aviso Legal</a>
-                <a href="contacto.html#cookies">Política de cookies</a>
+                <a href="#aviso">Aviso Legal</a>
+                <a href="#cookies">Política de cookies</a>
             </div>
             <p class="Copyright m-t">&copy Imperial Real State All Rights Reserved</p>
         </div>
