--- a/propiedad1.html
+++ b/propiedad1.html
@@ -13,10 +13,10 @@
     <header >
         <img src="img/logo.svg" alt="Logo Imperial Real State">
         <nav>
-            <a href="#" >Inicio</a>
-            <a href="#" class="activo">Ventas</a>
+            <a href="index.html" >Inicio</a>
+            <a href="ventas.html" class="activo">Ventas</a>
             <a href="#">Alquiler</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </header>
    
@@ -27,47 +27,64 @@
     </div>
     <div class="menu">
         <nav>
-            <a href="#">Inicio</a>
+            <a href="index.html">Inicio</a>
             <hr>
-            <a href="#">Ventas</a>
+            <a href="ventas.html">Ventas</a>
             <hr>
             <a href="#">Alquiler</a>
             <hr>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
             <hr>
         </nav>
         <p class="copy">&copy; Copyright</p>
     </div>
     <div class="fila propiedad">
         <div class="col-50">
-            <h1>Villa en los Altos de Marbella</h1>
-            <p>
-                <img src="/img/blueprint.svg" alt="Icono plano">
+            <h1 class="m-b">Villa en los Altos de Marbella</h1>
+            <p class="flex-start">
+                <img class="m-r-small" src="/img/blueprint.svg" alt="Icono plano">
                 950m2 habitables
-            </p>
-            <p>
-                <img src="/img/bed.svg" alt="Icono dormitorios">
+                </p>
+            <p class="flex-start">
+                <img class="m-r-small" src="/img/bed.svg" alt="Icono dormitorios">
                 7 Dormitorios
+                 </p>
+            <p class="flex-start">
+                <img class="m-r-small" src="/img/bath.svg" alt="Icono Baños">
+                9 Baños
             </p>
-            <p>
-                <img src="/img/bath.svg" alt="Icono Balños">
-                7 Baños
-            </p>
-            <p>
-                <img src="/img/tree.svg" alt="Icono Jardín">
+            <p class="flex-start">
+                <img class="m-r-small" src="/img/tree.svg" alt="Icono Jardín">
                 Jardin 2500m2
             </p>
-            <p>
-                <img src="/img/money.svg" alt="Icono monedas">
+            <p class="flex-start">
+                <img class="m-r-small" src="/img/money.svg" alt="Icono monedas">
                 $2,000,000
             </p>
-            <p>
-                <img src="/img/contract.svg" alt="Icono contrato">
+            <p class="flex-start">
+                <img class="m-r-small" src="/img/contract.svg" alt="Icono contrato">
                 Entrega Inmediata
             </p>
         </div>
         <div class="col-50"></div>
     </div>
+    <div class="fila">
+        <div class="col-50">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, voluptas! Eius eligendi consequuntur aut incidunt, inventore maiores nisi distinctio ipsa mollitia culpa accusantium. Quasi libero facilis quibusdam sed ducimus cumque ratione sapiente quisquam vero ipsa perspiciatis eveniet dolore pariatur aliquid illo dolor eius, reprehenderit assumenda provident! Eligendi sint doloribus perferendis?</p>
+        </div>
+        <div class="col-50">
+            <img src="/img/property2.jpg" alt="imagen de vivienda">
+        </div>
+    </div>
+    <div class="fila">
+        <div class="col-50">
+            <img src="/img/property2.jpg" alt="imagen de vivienda">
+        </div>
+        <div class="col-50">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit, voluptas! Eius eligendi consequuntur aut incidunt, inventore maiores nisi distinctio ipsa mollitia culpa accusantium. Quasi libero facilis quibusdam sed ducimus cumque ratione sapiente quisquam vero ipsa perspiciatis eveniet dolore pariatur aliquid illo dolor eius, reprehenderit assumenda provident! Eligendi sint doloribus perferendis?</p>
+        </div>
+    </div>
+    
     <footer class="fila">
         <div class="col-33">
             <p>Imperial Real State</p>
@@ -96,8 +113,8 @@
                 <img class="rrss" src="/img/instagram.svg" alt="">
             </div>
             <div class="flex-around m-t">
-                <a href="#">Aviso Legal</a>
-                <a href="#">Política de cookies</a>
+                <a href="contacto.html#aviso">Aviso Legal</a>
+                <a href="contacto.html#cookies">Política de cookies</a>
             </div>
             <p class="Copyright m-t">&copy Imperial Real State All Rights Reserved</p>
         </div>
