--- a/ventas.html
+++ b/ventas.html
@@ -27,13 +27,13 @@
     </div>
     <div class="menu">
         <nav>
-            <a href="#">Inicio</a>
+            <a href="index.html">Inicio</a>
             <hr>
-            <a href="#">Ventas</a>
+            <a href="ventas.html">Ventas</a>
             <hr>
             <a href="#">Alquiler</a>
             <hr>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
             <hr>
         </nav>
         <p class="copy">&copy; Copyright</p>
@@ -46,7 +46,7 @@
                     <p>Villa en Los Altos</p>
                     <p>$2,000,000</p>
                 </div>
-                <a href="#">Más info</a>
+                <a href="propiedad1.html">Más info</a>
             </div>
     </div>
         <div class="card">
@@ -158,8 +158,8 @@
                 <img class="rrss" src="/img/instagram.svg" alt="">
             </div>
             <div class="flex-around m-t">
-                <a href="#">Aviso Legal</a>
-                <a href="#">Política de cookies</a>
+                <a href="contacto.html#aviso">Aviso Legal</a>
+                <a href="contacto.html#cookies">Política de cookies</a>
             </div>
             <p class="Copyright m-t">&copy Imperial Real State All Rights Reserved</p>
         </div>
